Refactors App component and adds standard linter
Refactors the main application component into smaller, more manageable components (Header, Main, Footer) to improve code organization and maintainability.

Also, integrates Standard linter to enforce consistent code style and improve code quality, aligning with industry best practices.

--- a/02-react/src/index.css
+++ b/02-react/src/index.css
@@ -266,9 +266,11 @@ button {
 
 /* Features Section */
 main > section:nth-child(2) {
+  max-width: 1280px;
   padding-inline: 1rem;
   background-color: var(--background);
   padding-top: 2rem;
+  margin: 0 auto;
 
   & > header {
     gap: 2px;
@@ -284,7 +286,7 @@ main > section:nth-child(2) {
   }
 
   & > div {
-    max-width: 1280px;
+    
     margin: 0 auto;
   }
 }
